--- a/WorldGuardIntegrationPlugin/pom.xml
+++ b/WorldGuardIntegrationPlugin/pom.xml
@@ -16,6 +16,8 @@
     <name>WorldGuardIntegrationPlugin</name>
 
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
