--- a/WorldGuardV6/pom.xml
+++ b/WorldGuardV6/pom.xml
@@ -15,6 +15,8 @@
     <name>WorldGuardV6</name>
 
     <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
         <java.version>1.8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
