--- a/WorldGuardV7/pom.xml
+++ b/WorldGuardV7/pom.xml
@@ -15,6 +15,8 @@
     <name>WorldGuardV7</name>
 
     <properties>
+        <maven.compiler.source>16</maven.compiler.source>
+        <maven.compiler.target>16</maven.compiler.target>
         <java.version>16</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
