--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>me.fullpage</groupId>
     <artifactId>WorldGuardIntegration</artifactId>
-    <version>${revision}</version>
+    <version>1.0-SNAPSHOT</version>
     <modules>
         <module>WorldGuardIntegrationAPI</module>
         <module>WorldGuardV6</module>
