--- a/pom.xml
+++ b/pom.xml
@@ -6,18 +6,18 @@
 
     <groupId>me.fullpage</groupId>
     <artifactId>WorldGuardIntegration</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
+
+    <properties>
+        <revision>1.0-SNAPSHOT</revision>
+    </properties>
+    <version>${revision}</version>
     <modules>
         <module>WorldGuardIntegrationAPI</module>
         <module>WorldGuardV6</module>
         <module>WorldGuardV7</module>
         <module>WorldGuardIntegrationPlugin</module>
     </modules>
-    <packaging>pom</packaging>
-
-    <properties>
-        <revision>1.0-SNAPSHOT</revision>
-    </properties>
 
     <build>
         <defaultGoal>clean package install</defaultGoal>
