--- a/WorldGuardIntegrationAPI/pom.xml
+++ b/WorldGuardIntegrationAPI/pom.xml
@@ -11,6 +11,7 @@
     <packaging>jar</packaging>
     <artifactId>WorldGuardIntegrationAPI</artifactId>
     <name>WorldGuardIntegrationAPI</name>
+    <version>${revision}</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
