--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>NMSLib_V1_18_R1</module>
         <module>NMSLib_V1_18_R2</module>
         <module>NMSLib_V1_19_R1</module>
+        <module>NMSLib_V1_19_R2</module>
         <module>NMSLib_Plugin</module>
     </modules>
 
@@ -48,5 +49,26 @@
             </plugin>
         </plugins>-->
     </build>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+        <repository>
+            <id>codemc-repo</id>
+            <url>https://repo.codemc.org/repository/maven-public/</url>
+            <layout>default</layout>
+        </repository>
+    </repositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>com.github.Mantic-Development</groupId>
+            <artifactId>ManticLib</artifactId>
+            <version>1.0.23</version>
+            <scope>provided</scope>
+        </dependency>
+    </dependencies>
 
 </project>
