--- a/NMSLib_Plugin/pom.xml
+++ b/NMSLib_Plugin/pom.xml
@@ -146,5 +146,11 @@
             <version>${revision}</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>me.fullpage</groupId>
+            <artifactId>NMSLib_V1_19_R3</artifactId>
+            <version>${revision}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
