--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
         <module>NMSLib_V1_18_R2</module>
         <module>NMSLib_V1_19_R1</module>
         <module>NMSLib_V1_19_R2</module>
+        <module>NMSLib_V1_19_R3</module>
         <module>NMSLib_Plugin</module>
     </modules>
 
