--- a/NMSLib_Plugin/pom.xml
+++ b/NMSLib_Plugin/pom.xml
@@ -165,5 +165,12 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>me.fullpage</groupId>
+            <artifactId>NMSLib_V1_20_R3</artifactId>
+            <version>${revision}</version>
+            <scope>compile</scope>
+        </dependency>
+
     </dependencies>
 </project>
