--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <module>NMSLib_V1_19_R3</module>
         <module>NMSLib_V1_20_R1</module>
         <module>NMSLib_V1_20_R2</module>
+        <module>NMSLib_V1_20_R3</module>
         <module>NMSLib_Plugin</module>
     </modules>
 
