--- a/NMSLib_Plugin/pom.xml
+++ b/NMSLib_Plugin/pom.xml
@@ -186,5 +186,18 @@
             <scope>compile</scope>
         </dependency>
 
+        <dependency>
+            <groupId>me.fullpage</groupId>
+            <artifactId>NMSLib_V1_21_R2</artifactId>
+            <version>${revision}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>me.fullpage</groupId>
+            <artifactId>NMSLib_V1_21_R3</artifactId>
+            <version>${revision}</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
