--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <module>NMSLib_V1_21_R1</module>
         <module>NMSLib_V1_21_R2</module>
         <module>NMSLib_V1_21_R3</module>
+        <module>NMSLib_V1_21_R4</module>
         <module>NMSLib_Plugin</module>
     </modules>
 
