--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <module>NMSLib_V1_21_R2</module>
         <module>NMSLib_V1_21_R3</module>
         <module>NMSLib_V1_21_R4</module>
+        <module>NMSLib_V1_21_R8</module>
         <module>NMSLib_Plugin</module>
     </modules>
 
